--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,6 +53,15 @@
 
 
 /*------------------------- 1. Core Css -------------------*/
+.logo {
+  width: 150px;                         /* size of the logo area */
+  height: 150px;
+  background-image: url('https://sanjoseantique.gov.ph/wp-content/uploads/2019/09/SAN-JOSE-LOGO.png');     /* path to your logo file */
+  background-size: full;              /* makes logo fit inside the box */
+  background-repeat: no-repeat;          /* prevent repeating */
+  background-position: center;           /* center the logo */
+}
+
 .page-container {
     width: 100%;
     height: 100%;
