--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -139,7 +139,7 @@
 
 .sidebar-header {
     padding: 19px 32px 20px;
-    background: #011852;
+    background: #04194f;
     border-bottom: 1px solid #00FFFF;
 }
 .sidebar-menu .logo{
@@ -228,7 +228,7 @@
 .metismenu >li:hover>a,
 .metismenu >li.active>a {
     color: #fff;
-    background: #2c54b6;
+    background: #073099;
 }
 
 .metismenu li:hover>a,
@@ -818,7 +818,7 @@ ul.breadcrumbs {
 
 .user-profile .dropdown-menu a:hover {
     background: #f8f9fa;
-    color: #00FFFF;
+    color: #062676;
 }
 
 /*-------------------- END Page Title Area -------------------*/
